Fixed Layout alignment.

--- a/modules/gui/frontend/src/widget/layout.module.css
+++ b/modules/gui/frontend/src/widget/layout.module.css
@@ -52,7 +52,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
-    /* align-items: center; */
+    align-items: center; /* required */
     margin-bottom: calc(-1 * var(--vertical-spacing));
 }
 
